@@ -1054,6 +1054,7 @@ ioerror.encoding-error=Cannot load with "{0}" encoding.\n\
 	- with the File->Reload with Encoding menu.\n\
 	- in the Commands menu of the file system browser.\n\
 	- in the Utilities->Buffer Options dialog.
+ioerror.write-encoding-error=Failed to encode the character {3} at column {2} in line {1} with the encoding "{0}".
 ioerror.read-error=Cannot load: {0}
 ioerror.write-error=Cannot save: {0}
 ioerror.unsupported-encoding-error={0} charset is not supported by your JVM
